--- a/src/style.scss
+++ b/src/style.scss
@@ -51,14 +51,14 @@
   --ampFont: Baskerville, "Goudy Old Style", Palatino, "Book Antiqua", serif;
   --systemFont: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   --monoFont: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", "Roboto Mono", monospace;
-
   --color-beige: hsla(36, 31%, 90%, 1);
-  --color-green300: hsla(159, 42%, 88%, 1);
-  --color-green400: hsl(160, 52%, 71%);
-  --color-green500: hsla(172, 95%, 18%, 1);
-  --color-green600: hsla(171, 15%, 35%, 1);
-  --color-green700: hsla(171, 11%, 24%, 1);
-  --color-green800: hsla(158, 23%, 18%, 1);
+  --color-green300: #d4ede4;
+  --color-green400: #8fdcc2;
+  --color-green500: #025a4e;
+  --color-green600: #4c6763;
+  --color-green700: #364442;
+  --color-green800: #233831;
+  --color-gradient: linear-gradient(to bottom, hsla(158, 23%, 18%, 0) 0%, hsla(158, 23%, 18%, .013) 9.7%, hsla(158, 23%, 18%, .049) 18.1%, hsla(158, 23%, 18%, .104) 25.5%, hsla(158, 23%, 18%, .175) 31.9%, hsla(158, 23%, 18%, .259) 37.7%, hsla(158, 23%, 18%, .352) 43%, hsla(158, 23%, 18%, .45) 47.9%, hsla(158, 23%, 18%, .55) 52.8%, hsla(158, 23%, 18%, .648) 57.7%, hsla(158, 23%, 18%, .741) 63%, hsla(158, 23%, 18%, .825) 68.7%, hsla(158, 23%, 18%, .896) 75%, hsla(158, 23%, 18%, .951) 82.2%, hsla(158, 23%, 18%, .987) 90.5%, hsl(158, 23%, 18%) 100%);
 
   --color-description: #D4EDE4;
   --14px: .875rem;
@@ -88,7 +88,8 @@
   --zindex-navbar: 1;
 
 }
-html{
+
+html {
   scroll-behavior: smooth;
 }
 
@@ -109,21 +110,32 @@ body {
   -moz-font-feature-settings: "liga" on;
   min-height: 300vh;
   height: auto;
+
+  // background: var(--color-gradient);
   background: var(--color-green800);
-  background: linear-gradient(-45deg, #233831, #14291f, #233628, #32422d, #233831);
-	background-size: 400% 400%;
-	animation: gradient 10s ease infinite;
+  background: linear-gradient(180deg  #59884b,#233628,);
+  background-size: 400% 400%;
+  animation: gradient 2s ease infinite linear;
+
+
+
   height: auto;
 }
 
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
+
+
+
+
