--- a/src/style.scss
+++ b/src/style.scss
@@ -144,12 +144,13 @@ body {
   animation: wave 20s linear infinite forwards; /* Увеличьте продолжительность анимации до 20 секунд для более плавного перехода */
   background-image: repeating-linear-gradient(
     45deg, 
-    var(--color-green800)   calc(100% / 4  * 0 / 3), 
-    var(--color-green700) calc(100% / 4  * 1 / 3),
-    var(--color-green500) calc(100% / 4  * 2 / 3),
-    var(--color-green800)  calc(100% / 4  * 3 / 3)
+    var(--color-green800)   calc(100% / 3  * 0 / 3), 
+    var(--color-green700) calc(100% / 3  * 1 / 3),
+
+    var(--color-green800)  calc(100% / 3  * 2/ 3)
   );
   background-size: 400% 400%;
+  z-index: -2;
 }
 
 body::before {
@@ -160,7 +161,7 @@ body::before {
   width: 100%;
   height: 85vh; /* Закрывает 25% нижней части экрана */
   background: linear-gradient(to bottom, transparent,  var(--color-green800) ); /* Градиент от прозрачного к черному снизу */
-  z-index: 2; /* Перекрывает body */
+  z-index: -1; /* Перекрывает body */
 }
 @keyframes wave {
   from {
