--- a/src/style.scss
+++ b/src/style.scss
@@ -138,21 +138,18 @@ body {
   -webkit-font-feature-settings: "liga" on;
   font-feature-settings: "liga" on;
   -moz-font-feature-settings: "liga" on;
-  min-height: 300vh;
+  min-height: 100vh;
   height: auto;
-
-  animation: wave 20s linear infinite forwards; /* Увеличьте продолжительность анимации до 20 секунд для более плавного перехода */
-  background-image: repeating-linear-gradient(
-    45deg, 
-    var(--color-green800)   calc(100% / 3  * 0 / 3), 
-    var(--color-green700) calc(100% / 3  * 1 / 3),
-
-    var(--color-green800)  calc(100% / 3  * 2/ 3)
-  );
-  background-size: 400% 400%;
+  background: linear-gradient(45deg,#233831, #72384e,#233831, #306477 , #2d9179,#998826, #025a4e,#233831,);
+  background-size: 600% 100%;
+  animation: gradient 16s linear infinite;
+  animation-direction: alternate;
   z-index: -2;
 }
-
+@keyframes gradient {
+  0% {background-position: 0%}
+  100% {background-position: 100%}
+}
 body::before {
   content: "";
   position: fixed;
@@ -161,15 +158,15 @@ body::before {
   width: 100%;
   height: 85vh; /* Закрывает 25% нижней части экрана */
   background: linear-gradient(to bottom, transparent,  var(--color-green800) ); /* Градиент от прозрачного к черному снизу */
-  z-index: -1; /* Перекрывает body */
+  z-index: 0; /* Перекрывает body */
 }
-@keyframes wave {
-  from {
-    background-position: 100% 0;
-  }
-  to {
-    background-position: 0 100%;
-  }
-}
+// @keyframes wave {
+//   from {
+//     background-position: 100% 0;
+//   }
+//   to {
+//     background-position: 0 100%;
+//   }
+// }
 
 
