--- a/src/style.scss
+++ b/src/style.scss
@@ -71,7 +71,7 @@
   --color-green700: #364442;
   --color-green800: #233831;
   --color-gradient: linear-gradient(to bottom, hsla(158, 23%, 18%, 0) 0%, hsla(158, 23%, 18%, .013) 9.7%, hsla(158, 23%, 18%, .049) 18.1%, hsla(158, 23%, 18%, .104) 25.5%, hsla(158, 23%, 18%, .175) 31.9%, hsla(158, 23%, 18%, .259) 37.7%, hsla(158, 23%, 18%, .352) 43%, hsla(158, 23%, 18%, .45) 47.9%, hsla(158, 23%, 18%, .55) 52.8%, hsla(158, 23%, 18%, .648) 57.7%, hsla(158, 23%, 18%, .741) 63%, hsla(158, 23%, 18%, .825) 68.7%, hsla(158, 23%, 18%, .896) 75%, hsla(158, 23%, 18%, .951) 82.2%, hsla(158, 23%, 18%, .987) 90.5%, hsl(158, 23%, 18%) 100%);
-
+  --color-purple: #D094E5;
   --color-description: #D4EDE4;
   --14px: .875rem;
   --15px: .9375rem;
@@ -99,10 +99,7 @@
   --radius-nav: 35px;
   --zindex-navbar: 1;
 
-  --primary: #d63c6b;
-  --primary-dk: #c41c4f;
-  --accent: #5cc8ff;
-  --accent-dk: #00a3f5;
+
 
 }
 
